Update code to EteSync 2.0 (Etebase)

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -3,6 +3,12 @@ set(SOURCES
 	e-etesync-connection.h
 	e-source-etesync.c
 	e-source-etesync.h
+	e-source-etesync-account.c
+	e-source-etesync-account.h
+	e-etesync-service.c
+	e-etesync-service.h
+	e-etesync-utils.c
+	e-etesync-utils.h
 	e-etesync-defines.h
 )
 
@@ -15,9 +21,13 @@ target_compile_definitions(evolution-etesync PRIVATE
 )
 
 target_compile_options(evolution-etesync PUBLIC
-	${EVOLUTION_CALENDAR_CFLAGS}
-	${LIBEDATASERVER_CFLAGS}
 	${ETESYNC_CFLAGS}
+	${EVOLUTION_CALENDAR_CFLAGS}
+	${LIBEBOOK_CFLAGS}
+	${LIBEDATABOOK_CFLAGS}
+	${LIBECAL_CFLAGS}
+	${LIBEDATACAL_CFLAGS}
+	${LIBEDATASERVER_CFLAGS}
 )
 
 target_include_directories(evolution-etesync PUBLIC
@@ -26,15 +36,23 @@ target_include_directories(evolution-etesync PUBLIC
 	${CMAKE_BINARY_DIR}/src
 	${CMAKE_SOURCE_DIR}/src
 	${CMAKE_CURRENT_BINARY_DIR}
-	${EVOLUTION_CALENDAR_INCLUDE_DIRS}
-	${LIBEDATASERVER_INCLUDE_DIRS}
 	${ETESYNC_INCLUDE_DIRS}
+	${EVOLUTION_CALENDAR_INCLUDE_DIRS}
+	${LIBEBOOK_INCLUDE_DIRS}
+	${LIBEDATABOOK_INCLUDE_DIRS}
+	${LIBECAL_INCLUDE_DIRS}
+	${LIBEDATACAL_INCLUDE_DIRS}
+	${LIBEDATASERVER_INCLUDE_DIRS}
 )
 
 target_link_libraries(evolution-etesync
-	${EVOLUTION_CALENDAR_LDFLAGS}
-	${LIBEDATASERVER_LDFLAGS}
 	${ETESYNC_LDFLAGS}
+	${EVOLUTION_CALENDAR_LDFLAGS}
+	${LIBEBOOK_LDFLAGS}
+	${LIBEDATABOOK_LDFLAGS}
+	${LIBECAL_LDFLAGS}
+	${LIBEDATACAL_LDFLAGS}
+	${LIBEDATASERVER_LDFLAGS}
 )
 
 install(TARGETS evolution-etesync
