build: Correct flags for code-compiles checks
The previous version could generate an error:

CMake Error: Parse error in command line argument: WITH_GZFILEOP
 Should be: VAR:type=value

CMake Error at /usr/share/cmake/Modules/Internal/CheckSourceCompiles.cmake:101 (try_compile):
  Failed to configure test project build system.
Call Stack (most recent call first):
  /usr/share/cmake/Modules/CheckCSourceCompiles.cmake:52 (cmake_check_source_compiles)
  CMakeLists.txt:141 (CHECK_C_SOURCE_COMPILES)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,12 +124,12 @@ pkg_check_modules(GNOME_PLATFORM REQUIRED
 
 pkg_check_modules(ETESYNC REQUIRED etebase)
 
-set(CMAKE_REQUIRED_FLAGS ${LIBEDATABOOK_CFLAGS})
+set(CMAKE_REQUIRED_DEFINES ${LIBEDATABOOK_CFLAGS})
 set(CMAKE_REQUIRED_INCLUDES ${LIBEDATABOOK_INCLUDE_DIRS})
 set(CMAKE_REQUIRED_LIBRARIES ${LIBEDATABOOK_LIBS})
 CHECK_C_SOURCE_COMPILES("#include <libedata-book/libedata-book.h>
 			int main(void) { EBookMetaBackendClass cls; cls.backend_module_directory = NULL; return 0; }" HAVE_BACKEND_MODULE_DIRECTORY)
-unset(CMAKE_REQUIRED_FLAGS)
+unset(CMAKE_REQUIRED_DEFINES)
 unset(CMAKE_REQUIRED_INCLUDES)
 unset(CMAKE_REQUIRED_LIBRARIES)
 
@@ -137,12 +137,12 @@ unset(CMAKE_REQUIRED_LIBRARIES)
 # E_CAL_STATIC_CAPABILITY_SIMPLE_MEMO_WITH_SUMMARY checking
 # *********************************************************
 
-set(CMAKE_REQUIRED_FLAGS ${LIBECAL_CFLAGS})
+set(CMAKE_REQUIRED_DEFINES ${LIBECAL_CFLAGS})
 set(CMAKE_REQUIRED_INCLUDES ${LIBECAL_INCLUDE_DIRS})
 set(CMAKE_REQUIRED_LIBRARIES ${LIBECAL_LIBS})
 CHECK_C_SOURCE_COMPILES ("#include <libecal/libecal.h>
 			  int main(void) { const char *str = E_CAL_STATIC_CAPABILITY_SIMPLE_MEMO_WITH_SUMMARY; return 0; }" HAVE_SIMPLE_MEMO_WITH_SUMMARY_CAPABILITY)
-unset(CMAKE_REQUIRED_FLAGS)
+unset(CMAKE_REQUIRED_DEFINES)
 unset(CMAKE_REQUIRED_INCLUDES)
 unset(CMAKE_REQUIRED_LIBRARIES)
 
